--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -5,6 +5,7 @@ opentelemetry-api
 opentelemetry-sdk 
 opentelemetry-exporter-otlp-proto-http 
 opentelemetry-instrumentation-flask 
+opentelemetry-instrumentation-requests
 
 aws-xray-sdk
 
